--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -458,10 +458,10 @@ section {
   }
 }
 /*--------------------------------------------------------------
-# About Me
+# QUEM EU SOU
 -------------------------------------------------------------*/
 .about .image {
-  background: url("../img/anaclara1.jpeg") center center no-repeat;
+  background: url("../img/Quem\ sou\ eu.png") center center no-repeat;
   background-size: cover;
   min-height: 500px;
 }
@@ -852,8 +852,7 @@ hr {
   margin-top: 30px;
 }
 
-.musica .image {
-  background: url("../img/pop.jpg") center center no-repeat;
+.musica .image { ;
   background-size: cover;
   min-height: 500px;
 }
