adicionando os livros

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -997,7 +997,19 @@ hr {
 }
 .tlivro{
   transform: translate(500px, -410px);
-  width: 900px;
+  width: 700px;
   font-size: 20px;
   text-align: justify;
+}
+
+.minhavisaobr{
+  transform: translate(500px, -410px);
+  width: 600px;
+  font-size: 20px;
+}
+.fminhavisao{
+  float: left; /* Flutuar a imagem para a esquerda */
+  height: 400px;
+  width: 400px; /* Definir a largura da imagem */
+  margin-right: 2;
 }
