--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,9 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
+*h3{
+  color: #865dff;
+}
 *p{
   font-size: 20px;
 }
@@ -270,7 +273,7 @@ h6 {
 .navbar-mobile a:hover,
 .navbar-mobile .active,
 .navbar-mobile li:hover>a {
-  color: #ffb727;
+  color: #9e27ff;
 }
 
 .navbar-mobile .getstarted,
@@ -305,7 +308,7 @@ h6 {
 .navbar-mobile .dropdown ul a:hover,
 .navbar-mobile .dropdown ul .active:hover,
 .navbar-mobile .dropdown ul li:hover>a {
-  color: #ffb727;
+  color: #3d27ff;
 }
 
 .navbar-mobile .dropdown>.dropdown-active {
@@ -421,6 +424,16 @@ section {
 }
 
 .section-title h2 {
+  font-size: 32px;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+  padding-bottom: 0;
+  color: #865dff;
+  position: relative;
+  z-index: 2;
+}
+.section-title h3 {
   font-size: 32px;
   font-weight: 700;
   text-transform: uppercase;
