--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -868,115 +868,121 @@ hr {
   margin-top: 30px;
 }
 
-.musica .image {
- transform: translate(100px);
-}
+
 .musica1 .image1 {
-  float: left; /* Flutuar a imagem para a esquerda */
+  transform: translate(200px, 0px);
   height: 400px;
   width: 400px; /* Definir a largura da imagem */
   margin-right: 10px;
 }
 .musica2 .image2 {
-  float: left; /* Flutuar a imagem para a esquerda */
+  transform: translate(200px, 0px);
   height: 400px;
   width: 400px; /* Definir a largura da imagem */
-  margin-right: 20px;
+  margin-right: 10px;
 }
 .musica3 .image3 {
-  float: left; /* Flutuar a imagem para a esquerda */
+  transform: translate(200px, 0px);
   height: 400px;
   width: 400px; /* Definir a largura da imagem */
-  margin-right: 20px;
+  margin-right: 10px;
 }
 .letra{
-  transform: translate(420px, -400px);
+  transform: translate(700px, -400px);
 }
 .interpretacao{
-  transform: translate(750px, -970px);
+  transform: translate(200px, -300px);
   text-align: justify;
-  width: 500px;
+  width: 900px;
 
 }
 .interpretacao-2{
-  transform: translate(950px, -860px);
+  transform: translate(200px, -300px);
   text-align: justify;
-  width: 500px;
+  width: 900px;
+  
+  
 }
 .interpretacao-3{
-  transform: translate(970px, -780px);
+  transform: translate(200px, -200px);
   text-align: justify;
-  width: 500px;
+  width: 900px;
   
 
 }
 .sonhos .sonho1{
   float: left; /* Flutuar a imagem para a esquerda */
-  height: 400px;
-  width: 400px; /* Definir a largura da imagem */
+  height: 300px;
+  width: 300px; /* Definir a largura da imagem */
   margin-right: 20px;
 }
 .sonhos .lsonho1{
-  transform: translate(500px, -400px);
+  transform: translate(400px, -300px);
   width: 500px;
   font-size: 20px;
+  text-align: justify;
 }
 .sonhos .sonho2{
   float: left; /* Flutuar a imagem para a esquerda */
-  height: 400px;
-  width: 400px; /* Definir a largura da imagem */
+  height: 300px;
+  width: 300px; /* Definir a largura da imagem */
   margin-right: 20px;
 }
 .sonhos .lsonho2{
-  transform: translate(500px, -400px);
+  transform: translate(400px, -300px);
   width: 500px;
   font-size: 20px;
+  text-align: justify;
 }
 .sonhos .sonho3{
   float: left; /* Flutuar a imagem para a esquerda */
-  height: 400px;
-  width: 400px; /* Definir a largura da imagem */
+  height: 300px;
+  width: 300px; /* Definir a largura da imagem */
   margin-right: 20px;
 }
 .sonhos .lsonho3{
-  transform: translate(500px, -400px);
+  transform: translate(400px, -300px);
   width: 500px;
   font-size: 20px;
+  text-align: justify;
 }
 
 /*MEDOS*/
 .medo1{
   float: left; /* Flutuar a imagem para a esquerda */
-  height: 400px;
-  width: 400px; /* Definir a largura da imagem */
+  height: 300px;
+  width: 300px; /* Definir a largura da imagem */
   margin-right: 20px;
 }
 .lmedo1{
-  transform: translate(500px, -410px);
+  transform: translate(400px, -300px);
   width: 500px;
   font-size: 20px;
+  text-align: justify;
 }
 .medo2{
   float: left; /* Flutuar a imagem para a esquerda */
-  height: 400px;
-  width: 400px; /* Definir a largura da imagem */
+  height: 300px;
+  width: 300px; /* Definir a largura da imagem */
   margin-right: 20px;
 }
 .lmedo2{
-  transform: translate(500px, -400px);
+  transform: translate(400px, -300px);
   width: 500px;
   font-size: 20px;
+  text-align: justify;
 }
 .medo3{
   float: left; /* Flutuar a imagem para a esquerda */
-  height: 400px;
-  width: 400px; /* Definir a largura da imagem */
+  height: 300px;
+  width: 300px; /* Definir a largura da imagem */
   margin-right: 20px;
 }
 .lmedo3{
-  transform: translate(500px, -400px);
+  transform: translate(400px, -300px);
   width: 500px;
   font-size: 20px;
+  text-align: justify;
 }
 
 
